# stryx

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  new-rule-request.md
.github/actions/stryx/: action.yml
.github/workflows/: ci.yml  npm-publish.yml  release.yml
crates/stryx_ast/: Cargo.toml  README.md
crates/stryx_ast/src/: lib.rs
crates/stryx_cache/: Cargo.toml
crates/stryx_cache/src/: lib.rs
crates/stryx_cli/: Cargo.toml
crates/stryx_cli/src/: config.rs  lib.rs  main.rs  suppress.rs
crates/stryx_cli/tests/: diagnostics_dump.rs  profile.rs  rules.rs  surfaces.rs
crates/stryx_core/: Cargo.toml
crates/stryx_core/src/: finding.rs  lib.rs  severity.rs  span.rs
crates/stryx_index/: Cargo.toml  README.md
crates/stryx_index/src/: jsonc.rs  lib.rs  profile.rs
crates/stryx_index/src/profile/: detect.rs
crates/stryx_llm/: Cargo.toml
crates/stryx_llm/src/: lib.rs
crates/stryx_napi/: Cargo.toml  README.md  package-lock.json  package.json
crates/stryx_napi/src/: lib.rs
crates/stryx_reporter/: Cargo.toml
crates/stryx_reporter/src/: lib.rs
crates/stryx_rules/: Cargo.toml  README.md
crates/stryx_rules/benches/: auth_bypass_via_wrapper.rs  command_injection_via_exec.rs  eval_injection.rs  hardcoded_secret.rs  insecure_deserialize.rs  nosql_injection.rs  path_traversal.rs  prompt_injection.rs  redirect_open.rs  secret_to_response.rs  sql_injection.rs  ssrf_via_fetch.rs  unvalidated_body_to_db.rs  xss_via_dangerously_set_inner_html.rs
crates/stryx_rules/src/: adapters.rs  adapters_ajv.rs  adapters_anthropic.rs  adapters_auth_js.rs  adapters_better_auth.rs  adapters_bun.rs  adapters_class_validator.rs  adapters_clerk.rs  adapters_drizzle.rs  adapters_express.rs  adapters_fastify.rs  adapters_hono.rs  adapters_joi.rs  adapters_mysql2.rs  adapters_nestjs.rs  adapters_next.rs  adapters_node.rs  adapters_openai.rs  adapters_pg.rs  adapters_prisma.rs  adapters_valibot.rs  adapters_yup.rs  adapters_zod.rs  lib.rs  registry.rs
crates/stryx_rules/src/flows/: auth_bypass_via_wrapper.rs  command_injection_via_exec.rs  eval_injection.rs  insecure_deserialize.rs  mod.rs  nosql_injection.rs  path_traversal.rs  prompt_injection.rs  redirect_open.rs  secret_to_response.rs  sql_injection.rs  ssrf_via_fetch.rs  unvalidated_body_to_db.rs  xss_via_dangerously_set_inner_html.rs
crates/stryx_rules/src/generic/: hardcoded_secret.rs  mod.rs
crates/stryx_rules/src/steps/: hof.rs  mod.rs
crates/stryx_rules/src/steps/propagators/: mod.rs  structural.rs
crates/stryx_rules/src/steps/sanitizers/: auth.rs  mod.rs  parser.rs  redactor.rs  url_allowlist.rs
crates/stryx_rules/src/steps/sinks/: db.rs  deserialize.rs  eval.rs  exec.rs  fs.rs  http.rs  llm.rs  mod.rs  nosql.rs  redirect.rs  response.rs  sql.rs
crates/stryx_rules/src/steps/sources/: body.rs  mod.rs
crates/stryx_taint/: Cargo.toml  README.md
crates/stryx_taint/src/: lib.rs
docs/: faq.md  getting-started.md  glossary.md
docs/architecture/: ast-pipeline.md  cross-file-rules.md  llm-escalation.md  project-profile.md  rule-format.md  semantic-index.md  stack-adapters.md  taint-engine.md
docs/decisions/: 0001-rust-and-oxc.md  0002-hybrid-ast-llm-architecture.md  0003-cross-file-and-taint-as-core.md  0004-two-pass-fixpoint-with-iteration-cap.md  0005-taint-aware-cache-keys.md  0006-shape-lattice-taint-summary.md  0007-return-shape-tracking.md  0008-taint-step-trait-substrate.md  0009-guard-based-barriers.md  0010-external-library-summaries.md  0011-v01-to-v02-transition.md  0012-live-shape-lattice.md  0013-stack-aware-project-profiles.md  0014-adapter-substrate-api.md
docs/product/: stack-aware-cli.md
docs/roadmap/: stack-aware-scanning.md
docs/rules/: README.md  _template.md  flow-auth-bypass-via-wrapper.md  flow-command-injection-via-exec.md  flow-eval-injection.md  flow-insecure-deserialize.md  flow-nosql-injection.md  flow-path-traversal.md  flow-prompt-injection.md  flow-redirect-open.md  flow-secret-to-response.md  flow-sql-injection.md  flow-ssrf-via-fetch.md  flow-unvalidated-body-to-db.md  flow-xss-via-dangerously-set-inner-html.md  generic-hardcoded-secret.md
docs/stacks/: README.md
scripts/: cargo-publish.sh
tests/fixtures/flow-auth-bypass-via-wrapper/bad/: lib.ts  route.ts
tests/fixtures/flow-auth-bypass-via-wrapper/good/: lib.ts  route.ts
tests/fixtures/flow-command-injection-via-exec/: bad.ts  good.ts
tests/fixtures/flow-command-injection-via-exec/cross-file-bad/: lib.ts  route.ts
tests/fixtures/flow-command-injection-via-exec/cross-file-good/: lib.ts  route.ts
tests/fixtures/flow-eval-injection/: bad.ts  good.ts
tests/fixtures/flow-insecure-deserialize/: bad.ts  good.ts
tests/fixtures/flow-nosql-injection/: bad.ts  good.ts
tests/fixtures/flow-path-traversal/: bad.ts  good.ts
tests/fixtures/flow-prompt-injection/: bad.ts  good.ts
tests/fixtures/flow-redirect-open/: bad.ts  good.ts
tests/fixtures/flow-redirect-open/cross-file-bad/: lib.ts  route.ts
tests/fixtures/flow-redirect-open/cross-file-good/: lib.ts  route.ts
tests/fixtures/flow-secret-to-response/: bad.ts  good.ts
tests/fixtures/flow-secret-to-response/precision-boundaries/: lib.ts
tests/fixtures/flow-sql-injection/: assignment-bad.ts  bad.ts  good.ts
tests/fixtures/flow-sql-injection/cross-file-bad/: lib.ts  route.ts
tests/fixtures/flow-sql-injection/cross-file-good/: lib.ts  route.ts
tests/fixtures/flow-ssrf-via-fetch/: bad.ts  good.ts
tests/fixtures/flow-unvalidated-body-to-db/: bad.ts  branch-merge-bad.ts  destructuring-projection.ts  good.ts  higher-order-bad.ts  per-field-sanitisation.ts
tests/fixtures/flow-xss-via-dangerously-set-inner-html/: bad.tsx  good.tsx
tests/fixtures/generic-hardcoded-secret/: bad.ts  good.ts
tests/fixtures/suppress-comments/: file-level.ts  inline.ts
(+55 files in other folders)
