[package]
name         = "stryx_ast"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Normalized AST layer over oxc, plus parser entry points used by Stryx."

[dependencies]
stryx_core    = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast       = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_parser    = { workspace = true }
oxc_semantic  = { workspace = true }
oxc_span      = { workspace = true }
