[package]
name         = "stryx_index"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Project-level semantic index for the Stryx static analyzer. Cross-file symbol resolution, import graph, framework hints; tsconfig path-alias aware."

[dependencies]
stryx_core  = { workspace = true }
stryx_taint = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
