[package]
name         = "stryx_llm"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "LLM escalation client for Stryx. v0.0.1 ships with a NullLlmClient only."

[dependencies]
stryx_core  = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }
