[package]
name         = "stryx_llm"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "LLM escalation client trait for the Stryx static analyzer. Provider-pluggable (Anthropic / OpenAI / Ollama); content-hash cached. Layer 3 of Stryx's 3-layer pipeline."

[dependencies]
stryx_core  = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }
