[package]
name         = "stryx_napi"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Node.js bindings for the Stryx static analyzer (napi-rs)."
publish      = false

[lib]
crate-type = ["cdylib"]

[dependencies]
stryx_cli      = { workspace = true }
stryx_core     = { workspace = true }
stryx_reporter = { workspace = true }
stryx_rules    = { workspace = true }
napi           = { version = "3", default-features = false, features = ["napi9", "serde-json"] }
napi-derive    = "3"
serde          = { workspace = true }
serde_json     = { workspace = true }

[build-dependencies]
napi-build = "2"
