[package]
name         = "stryx_reporter"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Output formatters for Stryx (human, JSON, SARIF — JSON + human in v0.0.1)."

[dependencies]
stryx_core = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
