[package]
name         = "stryx_reporter"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Output formatters for the Stryx static analyzer. Human-readable and JSON finder reports; SARIF and GitHub annotations planned."

[dependencies]
stryx_core = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
