[package]
name         = "stryx_taint"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Inter-procedural taint engine for the Stryx static analyzer. Cell/Shape lattice + per-rule ExportedFunctionSummary with content-keyed caching."

[dependencies]
stryx_core = { workspace = true }
serde      = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
